--- a/xap/blueprint.yaml
+++ b/xap/blueprint.yaml
@@ -22,11 +22,18 @@ inputs:
         type: string
     xap_container_vm_flavor:
         type: string
+    xap_management_vm_sec_grp:
+        type: string
+    xap_container_vm_sec_grp:
+        type: string
+
 
 node_templates:
         xap_management_security_group:
             type: cloudify.openstack.nodes.SecurityGroup
             properties:
+                security_group:
+                    name: { get_input: xap_management_vm_sec_grp }
                 rules:
                     - remote_ip_prefix: 0.0.0.0/0
                       port: 8099
@@ -55,6 +62,8 @@ node_templates:
         xap_container_security_group:
             type: cloudify.openstack.nodes.SecurityGroup
             properties:
+                security_group:
+                    name: { get_input: xap_container_vm_sec_grp }
                 rules:
                     - remote_ip_prefix: 0.0.0.0/0
                       port_range_min: 7122
@@ -86,7 +95,7 @@ node_templates:
                 server:
                     image: { get_input: xap_management_vm_image }
                     flavor: { get_input: xap_management_vm_flavor }
-                    security_groups: ['xap_management_security_group']
+                    security_groups: [ { get_input: xap_management_vm_sec_grp } ]
             relationships:
                 - target: floatingip
                   type: cloudify.openstack.server_connected_to_floating_ip
@@ -106,7 +115,7 @@ node_templates:
                 server:
                     image: { get_input: xap_container_vm_image }
                     flavor: { get_input: xap_container_vm_flavor }
-                    security_groups: ['xap_container_security_group']
+                    security_groups: [ { get_input: xap_container_vm_sec_grp } ]
             relationships:
                 - target: xap_container_security_group
                   type: cloudify.relationships.depends_on
