--- a/xap/blueprint.yaml
+++ b/xap/blueprint.yaml
@@ -37,6 +37,10 @@ node_templates:
                     - remote_ip_prefix: 0.0.0.0/0
                       port: 8099
                     - remote_ip_prefix: 0.0.0.0/0
+                      port: 8080
+                    - remote_ip_prefix: 0.0.0.0/0
+                      port: 22
+                    - remote_ip_prefix: 0.0.0.0/0
                       port: 9099
                     - remote_ip_prefix: 0.0.0.0/0
                       port_range_min: 7122
@@ -67,6 +71,8 @@ node_templates:
                     - remote_ip_prefix: 0.0.0.0/0
                       port_range_min: 7122
                       port_range_max: 7222
+                    - remote_ip_prefix: 0.0.0.0/0
+                      port: 22
                     - direction: egress
                       remote_ip_prefix: 0.0.0.0/0
                       port_range_min: 7122
