--- a/xap/blueprint.yaml
+++ b/xap/blueprint.yaml
@@ -45,6 +45,9 @@ node_templates:
                     - remote_ip_prefix: 0.0.0.0/0
                       port_range_min: 7122
                       port_range_max: 7222
+                    - remote_ip_prefix: 0.0.0.0/0
+                      port_range_min: 40000
+                      port_range_max: 50000
                     - direction: egress
                       remote_ip_prefix: 0.0.0.0/0
                       port_range_min: 7122
@@ -61,6 +64,10 @@ node_templates:
                       remote_ip_prefix: 0.0.0.0/0
                       port_range_min: 7102
                       port_range_max: 7104
+                    - direction: egress
+                      remote_ip_prefix: 0.0.0.0/0
+                      port_range_min: 40000
+                      port_range_max: 50000
 
         xap_container_security_group:
             type: cloudify.openstack.nodes.SecurityGroup
@@ -72,11 +79,18 @@ node_templates:
                       port_range_min: 7122
                       port_range_max: 7222
                     - remote_ip_prefix: 0.0.0.0/0
+                      port_range_min: 40000
+                      port_range_max: 50000
+                    - remote_ip_prefix: 0.0.0.0/0
                       port: 22
                     - direction: egress
                       remote_ip_prefix: 0.0.0.0/0
                       port_range_min: 7122
                       port_range_max: 7222
+                    - direction: egress
+                      remote_ip_prefix: 0.0.0.0/0
+                      port_range_min: 40000
+                      port_range_max: 50000
                     - remote_ip_prefix: 0.0.0.0/0
                       port: 4174
                     - direction: egress
