--- a/xap/xap-blueprint-commons.yaml
+++ b/xap/xap-blueprint-commons.yaml
@@ -172,6 +172,7 @@ outputs:
       description: XAP UI URL
       value:
         management_url: { concat: ['http://', { get_attribute: [floatingip, floating_ip_address] },':', { get_property: [webui, webui_port] }] }
-        butterfly_url: { concat: ['http://', { get_attribute: [floatingip, floating_ip_address] },':', { get_property: [demo_shell, port] }] }
-        ip: {  get_attribute: [ floatingip,  floating_ip_address ] }
-        port: 7104
+        client_url: { concat: ['http://', { get_attribute: [xap_client_floatingip, floating_ip_address] },':8000/'] }
+        #butterfly_url: { concat: ['http://', { get_attribute: [floatingip, floating_ip_address] },':', { get_property: [demo_shell, port] }] }
+        #ip: {  get_attribute: [ floatingip,  floating_ip_address ] }
+        #port: 7104
