--- a/xap/blueprint.yaml
+++ b/xap/blueprint.yaml
@@ -149,7 +149,7 @@ node_templates:
                 gsm_cnt: 1
                 global_gsm_cnt: 0
                 gsc_cnt: 0
-                GSM_JAVA_OPTIONS: -Xms128m -Xmx128m
+                GSM_JAVA_OPTIONS: -Xmx512m -Xms512m
             relationships:
                 -   target: xap_management_vm
                     type: cloudify.relationships.contained_in
@@ -172,6 +172,9 @@ node_templates:
             type: xap_type
             properties:
                 gsc_cnt: 1
+                GSA_JAVA_OPTIONS: -Xmx512m -Xms512m
+                LUS_JAVA_OPTIONS: -Xmx512m -Xms512m
+                GSM_JAVA_OPTIONS: -Xmx512m -Xms512m
                 GSC_JAVA_OPTIONS: -Xmx2048m -Xms2048m -Xmn512m
             relationships:
                 -   target: xap_container_vm
